force-app/main/default/objects/Access_Review__c/Access_Review__c.object-meta.xml
<CustomObject>
    <description>ISO 27001 Control A.9 - Access Control. Tracks periodic access reviews, privilege management, and access right certifications for information security compliance.</description>
    <label>Access Review</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Access Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>