force-app/main/default/objects/Access_Review__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>Reviewer's decision on the access rights</description>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve All Access</fullName>
            </value>
            <value>
                <fullName>Revoke All Access</fullName>
            </value>
            <value>
                <fullName>Modify Access</fullName>
            </value>
            <value>
                <fullName>Escalate to Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>