force-app/main/default/objects/Access_Review__c/fields/Decision_Justification__c.field-meta.xml
<CustomField>
    <fullName>Decision_Justification__c</fullName>
    <description>Reviewer's justification for the access decision</description>
    <label>Decision Justification</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>