force-app/main/default/objects/Access_Review__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Deadline for completing the access review</description>
    <label>Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>