force-app/main/default/objects/Access_Review__c/fields/Is_Privileged_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Privileged_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if user has privileged/admin access requiring enhanced review</description>
    <label>Is Privileged User</label>
    <type>Checkbox</type>
</CustomField>