force-app/main/default/objects/Access_Review__c/fields/Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Date__c</fullName>
    <description>User's last login date at time of review (for dormant account detection)</description>
    <label>Last Login Date</label>
    <type>DateTime</type>
</CustomField>