force-app/main/default/objects/Access_Review__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes and observations from the access review</description>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>