force-app/main/default/objects/Access_Review__c/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <description>JSON representation of the user's permission sets at time of review</description>
    <label>Permission Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>