force-app/main/default/objects/Access_Review__c/fields/Permission_Sets_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_Reviewed__c</fullName>
    <description>List of permission sets reviewed for this user</description>
    <label>Permission Sets Reviewed</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>