force-app/main/default/objects/Access_Review__c/fields/Profiles_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Profiles_Reviewed__c</fullName>
    <description>Profile assigned to the user at time of review</description>
    <label>Profiles Reviewed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>