force-app/main/default/objects/Access_Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <description>Date when the access review was conducted</description>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>