force-app/main/default/objects/Access_Review__c/fields/Review_Scope__c.field-meta.xml
<CustomField>
    <fullName>Review_Scope__c</fullName>
    <description>Scope of the access review being conducted</description>
    <label>Review Scope</label>
    <type>Text</type>
    <length>255</length>
</CustomField>