force-app/main/default/objects/Access_Review__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <description>Current status of the access review</description>
    <label>Review Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>