force-app/main/default/objects/Access_Review__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <description>Type of access review being conducted</description>
    <label>Review Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly Review</fullName>
                <default>true</default>
                <label>Quarterly Review</label>
            </value>
            <value>
                <fullName>Annual Certification</fullName>
            </value>
            <value>
                <fullName>Privileged Access Review</fullName>
            </value>
            <value>
                <fullName>Termination Review</fullName>
            </value>
            <value>
                <fullName>Role Change Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>