force-app/main/default/objects/Access_Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager or security officer conducting the review</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviews Conducted</relationshipLabel>
    <relationshipName>Reviews_Conducted</relationshipName>
    <type>Lookup</type>
</CustomField>