force-app/main/default/objects/Access_Review__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>Calculated risk score for the user's access level (0-10)</description>
    <label>Risk Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>