force-app/main/default/objects/Access_Review__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status of the access review</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>IN_PROGRESS</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>REVOKED</fullName>
                <label>Revoked</label>
            </value>
            <value>
                <fullName>ESCALATED</fullName>
                <label>Escalated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>