force-app/main/default/objects/Access_Review__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User whose access is being reviewed</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Access Reviews</relationshipLabel>
    <relationshipName>Access_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>